Fix radar animation double-step skipping issue
- Add safeguard in play() to clear existing timer before starting new interval

- Prevents multiple stacked intervals that caused animation to jump in doubles

- Animation now advances smoothly frame-by-frame

--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,10 @@
                         <span class="radar-relative" id="radarRelative"></span>
                     </div>
                 </div>
+                <button class="radar-speed-btn" id="radarSpeedBtn" aria-label="Change playback speed"
+                    title="Playback speed">
+                    <span id="radarSpeedLabel">1x</span>
+                </button>
             </div>
 
             <!-- Mobile Countdown Overlay (visible only on mobile) -->
