feat: replace F1 text with logo image and update favicon

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles.css">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/logo-light.png">
 </head>
 
 <body>
@@ -42,7 +45,7 @@
                     </svg>
                 </button>
                 <h1>Circuit Weather</h1>
-                <span class="header-badge">F1</span>
+                <img src="/images/logo-light.png" alt="F1" class="header-logo" id="sidebarLogo">
                 <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark/light mode">
                     <svg class="icon-sun" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="5"></circle>
@@ -135,7 +138,7 @@
                 </button>
                 <div class="mobile-header-brand">
                     <h1>Circuit Weather</h1>
-                    <span class="header-badge">F1</span>
+                    <img src="/images/logo-light.png" alt="F1" class="header-logo" id="mobileLogo">
                 </div>
                 <button class="theme-toggle mobile-theme-toggle" id="mobileThemeToggle"
                     aria-label="Toggle dark/light mode">
